--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,9 +20,6 @@
 
   --max-width: 1100px;
   --border-radius: 25px;
-  /* --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace; */
 }
 
 * {
@@ -33,6 +30,7 @@
   font-weight: 400;
   transition: all 0.2s;
   color: var(--text-color);
+  transition: all 0.2s;
 }
 
 html {
