--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,7 @@
   --border-radius-sm: 5px;
 
   --text-color: #616d57;
+  --text-color--dark: #081d03;
 
   --max-width: 1100px;
   --border-radius: 25px;
