--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 :root {
   --color-primary: #4ea62f;
   --color-primary-rgb: rgba(78, 166, 47, 1);
+  --color-dark: #081d03;
 
   --color-primary-shade-d: #2f641c;
   --color-primary-shade: #3e8526;
@@ -30,7 +31,7 @@
   font-family: "Quicksand", sans-serif;
   margin: 0;
   padding: 0;
-  font-weight: 400;
+  font-weight: 100;
   transition: all 0.2s;
   color: var(--text-color);
   transition: all 0.2s;
@@ -41,6 +42,10 @@ html {
   height: 100vh;
   width: 100vw;
   letter-spacing: 1.5%;
+}
+
+ul {
+  list-style: none;
 }
 
 body {
