--- a/src/components/ui/button/Button.module.css
+++ b/src/components/ui/button/Button.module.css
@@ -1,5 +1,4 @@
-.link--background,
-.link--no-background {
+.button {
   padding: 1rem 2rem;
   border-radius: var(--border-radius-sm);
 
@@ -8,19 +7,21 @@
   text-decoration: none;
 
   font-weight: normal;
+
+  cursor: pointer;
 }
 
-.link--background {
+.button {
   background-color: var(--color-primary-tint);
   color: var(--color-black);
   border: 1px solid var(--color-primary);
 }
 
-.link--background:hover {
+.button:hover {
   background-color: transparent;
   color: var(--color-primary-shade);
 }
 
-/* .link--no-background {
-  border: 1px solid var(--color-primary);
-} */
+.button:active {
+  background-color: var(--color-primary-tint);
+}
