--- a/src/components/pages/auth/signup/SignUpPage.module.css
+++ b/src/components/pages/auth/signup/SignUpPage.module.css
@@ -9,6 +9,10 @@
   margin: 0 auto;
   margin-top: 9.7rem;
   border: 2px solid var(--color-dark);
+
+  position: relative;
+
+  overflow: hidden;
 }
 
 .or {
@@ -22,4 +26,28 @@
   display: flex;
   gap: 1rem;
   justify-content: center;
+}
+
+.spinner-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(78, 166, 47, 0.1);
+  /* z-index: 100; */
+  /* opacity: 0.1; */
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.spinner {
+  border-width: 5px;
+  border-radius: 50%;
+  width: 5rem;
+  height: 5rem;
+  z-index: 100;
+  /* opacity: 1; */
 }
